kubsexam/ingress-rule/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sock-shop
  name: sock-shop-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx 
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:

  ingressClassName: nginx
  rules:
  - host: socks-shop.yomiadebowale.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end
            port:
              number: 80
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
#  annotations:
#    kubernetes.io/ingress.class: nginx 
spec:
  ingressClassName: nginx
  rules:
  - host: doggy.yomiadebowale.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-service
            port:
              number: 3000
